src/test/deca/context/invalid/print_boolean.deca
// Description:
//    print boolean ;
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 04/01/2023

{
    print(true);
}
